OPA_gatekeeper/pcidss_framework/constraint-no-privileged.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPPrivilegedContainer
metadata:
  name: pci-dss-no-privileged
spec:
  match:
    kinds:
      - kinds: ["Pod"]
    namespaces:
      - "default"
      - "production"
