OPA_gatekeeper/pcidss_framework/template-readonly-fs.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sreadonlyrootfilesystem
spec:
  crd:
    spec:
      names:
        kind: K8sReadOnlyRootFilesystem
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sreadonlyrootfilesystem
        violation[{"msg": msg}] {
          c := input.review.object.spec.containers[_]
          not c.securityContext.readOnlyRootFilesystem
          msg := sprintf("PCI-DSS Alert: Container %v must use a read-only root filesystem", [c.name])
        }
